<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mt.cardletter.MainActivity">
    <FrameLayout
        android:id="@+id/activity_main_layout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"/>
    <RadioGroup
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/colorbg"
        android:id="@+id/activity_main_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/activity_main_radiobutton_home"
            style="@style/main_footer_bar_radio"
            android:checked="true"
            android:drawableTop="@drawable/radio_bg_home"
            android:text="@string/home"/>
        <RadioButton
            android:id="@+id/activity_main_radiobutton_integral"
            style="@style/main_footer_bar_radio"
            android:drawableTop="@drawable/radio_bg_integral"
            android:text="@string/integral"/>

        <RadioButton
            android:id="@+id/activity_main_radiobutton_discover"
            android:drawableTop="@drawable/radio_bg_discover"
            style="@style/main_footer_bar_radio"
            android:text="@string/discover"/>
        <RadioButton
            android:id="@+id/activity_main_radiobutton_card"
            android:drawableTop="@drawable/radio_bg_card_manager"
            style="@style/main_footer_bar_radio"
            android:text="@string/card_manager"/>
        <RadioButton
            android:id="@+id/activity_main_radiobutton_user"
            android:drawableTop="@drawable/radio_bg_mine"
            style="@style/main_footer_bar_radio"
            android:text="@string/mine"/>
    </RadioGroup>
</LinearLayout>
